# termux-auth

./: CMakeLists.txt  README.md  passwd.c  pwlogin.c  termux-auth.c  termux-auth.h  testauth.c
biswas/biswas29/: termux-auth.h
